<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@android:color/holo_green_dark"
  android:orientation="vertical"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingBottom="@dimen/activity_vertical_margin">


  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycler_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:background="@android:color/holo_orange_dark"
    android:clipToPadding="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="120dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="120dp" />


  <TextView
    android:id="@+id/tv_selected_item"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center"
    android:textSize="40sp"
    tools:text="1" />

</LinearLayout>